# segment-anything-2

./: .gitignore  pyproject.toml  setup.py
notebooks/: generate_all_automatic_masks.ipynb  generate_study18_sam2.1_512_model.ipynb  generate_study20_sam2.1_512_box_min_max.ipynb  my_sam2_utils.py  stats_utils.py  study1_automatic_masks.ipynb  study2_pointless_3d_segmentation.ipynb
sam2/: automatic_mask_generator.py  build_sam.py  sam2_tomogram_predictor.py
